crates/toml_edit/tests/snapshots/invalid/table/nested-brackets-close.stderr
TOML parse error at line 1, column 4
  |
1 | [a]b]
  |    ^
unexpected key or value, expected newline, `#`
